--- a/src/ui/hooks/styles/contextmenu.less
+++ b/src/ui/hooks/styles/contextmenu.less
@@ -4,7 +4,7 @@
   user-select: none;
   position: fixed;
   background-color: #181818;
-  border:1px solid #242424;
+  border:1px solid #353535;
   box-shadow: 0px 0px 0px 1px #181818;
   border-radius: 4px;
   >.text{
@@ -15,7 +15,7 @@
     padding:1px 15px;
     font-size:10px;
     color:#f4f4f4;
-    margin:1px 2px;
+    margin:1px;
     border-radius: 4px;
     &:hover{
       background-color: #4772B3;
