--- a/src/ui/styles/ui-map.less
+++ b/src/ui/styles/ui-map.less
@@ -1,8 +1,26 @@
 
 
 .Map{
+  user-select: none;
   width: 100%;
   height: 100%;
   background-color: #1d1d1d;
   background-image: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 2.5%, rgba(0, 0, 0, 0) 2.5%),linear-gradient(rgba(255, 255, 255, 0.1) 2.5%, rgba(0, 0, 0, 0) 2.5%); background-size: 40px 40px;
+  position: relative;
+  overflow: hidden;
+  *{
+    box-sizing: border-box;
+  }
+  >.bg{
+    position: absolute;
+    left:0px;
+    top:0px;
+    height: 100%;
+    width: 100%;
+  }
+  >.nodes{
+    position: absolute;
+    left:50%;
+    top:50%;
+  }
 }
