更新了部分内容

--- a/src/ui/styles/ui-node.less
+++ b/src/ui/styles/ui-node.less
@@ -19,6 +19,7 @@
     border-radius: 4px 4px 0px 0px;
   }
   >.group{
+    position: relative;
     padding:3px 0px;
     background-color: #353535;
   }
@@ -42,6 +43,9 @@
     cursor: pointer;
     &:hover{
       border:1px solid orange;
+    }
+    &.active{
+      background-color: orange;
     }
   }
 }
