--- a/src/ui/styles/ui-map.less
+++ b/src/ui/styles/ui-map.less
@@ -24,3 +24,33 @@
     top:50%;
   }
 }
+
+.Link{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  left:0px;
+  top:0px;
+  >svg{
+    width: 100%;
+    height: 100%;
+    >g{
+      transform: translate3d(50%,50%,0px);
+      >g{
+        >path{
+          fill: none;
+          &.line{
+            stroke: orange;
+            stroke-width: 3px;
+          }
+          &.linebg{
+            pointer-events: all;
+            stroke: #000;
+            stroke-width: 6px;
+          }
+        }
+      }
+    }
+  }
+}
