--- a/src/ui/styles/ui-node.less
+++ b/src/ui/styles/ui-node.less
@@ -8,6 +8,9 @@
   border-radius: 4px;
   border:1px solid #000;
   box-shadow: 0px 2px 4px 1px #000;
+  &.isSelect{
+    border-color:orange;
+  }
   >.title{
     background-color: #17487a;
     border-bottom: 1px solid #101010;
