--- a/src/ui/styles/ui-map.less
+++ b/src/ui/styles/ui-map.less
@@ -5,7 +5,8 @@
   width: 100%;
   height: 100%;
   background-color: #1d1d1d;
-  background-image: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 2.5%, rgba(0, 0, 0, 0) 2.5%),linear-gradient(rgba(255, 255, 255, 0.1) 2.5%, rgba(0, 0, 0, 0) 2.5%); background-size: 40px 40px;
+  background-image: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 3.5%, rgba(0, 0, 0, 0) 3.5%),linear-gradient(rgba(255, 255, 255, 0.1) 3.5%, rgba(0, 0, 0, 0) 3.5%); 
+  background-size: 40px 40px;
   position: relative;
   overflow: hidden;
   *{
