--- a/src/ui/styles/ui-node.less
+++ b/src/ui/styles/ui-node.less
@@ -32,6 +32,7 @@
   color:#ddd;
   position: relative;
   padding-left:10px;
+  padding-right: 10px;
   margin: 2px 0px;
   min-height: 20px;
   >.pointer{
