加入了选中层级的优化

--- a/src/ui/styles/ui-node.less
+++ b/src/ui/styles/ui-node.less
@@ -15,11 +15,15 @@
     background-color: #17487a;
     border-bottom: 1px solid #101010;
     color:#ddd;
-    padding-left:10px;
     height: 24px;
     line-height: 24px;
     overflow: hidden;
     border-radius: 4px 4px 0px 0px;
+    >.switch{
+      display: inline-block;
+      width:20px;
+      text-align: center;
+    }
   }
   >.group{
     position: relative;
