加入了右键多选功能

--- a/src/ui/styles/ui-node.less
+++ b/src/ui/styles/ui-node.less
@@ -16,13 +16,22 @@
     border-bottom: 1px solid #101010;
     color:#ddd;
     height: 24px;
-    line-height: 24px;
-    overflow: hidden;
+    line-height: 18px;
+    // overflow: hidden;
     border-radius: 4px 4px 0px 0px;
+    word-break: keep-all;
+    position: relative;
+    padding-left:20px;
     >.switch{
+      position: absolute;
+      left:0px;
+      top:0px;
       display: inline-block;
       width:20px;
       text-align: center;
+    }
+    >.name{
+      vertical-align: middle;
     }
   }
   >.group{
