--- a/src/ui/styles/ui-map.less
+++ b/src/ui/styles/ui-map.less
@@ -19,6 +19,12 @@
     height: 100%;
     width: 100%;
   }
+  >.selectBox{
+    position: absolute;
+    background-color: rgba(22, 205, 255,0.3);
+    border:1px solid rgba(22, 205, 255,0.7);
+    pointer-events: none;
+  }
   >.nodes{
     position: absolute;
     left:50%;
